# IBM-Quantum-Experiments

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IBM_QUANTUM_EXPERIMENTS_AUDIT.md  README.md  ROADMAP.md  SECURITY.md  environment.yml  parse_ibm_json.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
analysis/: README.md  noise_model_extended.py
benchmarking/: README.md  qaoa_maxcut_results.csv  vqe_h2_results.csv
benchmarks/: README.md
data/: quantum_results_verified.csv
deployment/: Dockerfile  docker-compose.yml
docs/: ARXIV_PREP.md  CHECKSUMS.md  DATA_AVAILABILITY.md  IBM_QUANTUM_EXPERIMENTS_AUDIT.md  JOB_IDS.md  NATURE_READINESS.md  PARSER_FUNCTION_MAP.md  REMEDIATION_PLAN.md  REPOSITORY_MAP.md  RESEARCH_OVERVIEW.md  ROADMAP.md  RUNTIME_SAFETY.md  architecture.md  landing_page.md  pitch_deck.md  sponsors.md
drafts/: README.md  app_startup_variant.py  qaoa_engine_qiskit_variant.py  qpu_pyproject_variant.toml  requirements_variant.txt
examples/: ibm_demo.py  local_demo.py
latex/: bibliography.bib  main.tex  statistical_appendix.tex
materials/: README.md
notebooks/: 01_Bell_State_Entanglement.ipynb  02_BB84_QKD.ipynb  03_VQC.ipynb  04_QRNG_Reproducibility.ipynb  05_QPU_Benchmarking.ipynb  06_QPU_Noise_Model_Analysis.ipynb  README.md
qoptisolve/: app.py
quantum_core/: __init__.py  backend.py  bb84.py  bell_test.py  constants.py  grover.py  market_encoder.py  optimizer.py  phase_estimation.py  physics.py  portfolio_optimizer.py  qft.py
(+69 files in other folders)
