[project]
name = "qoptisolve"
version = "0.1.0"
description = "Quantum-AI Optimization Engine using QAOA, VQE, AI heuristics and QPU execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dino Hatibovic" }
]
keywords = [
    "quantum",
    "optimization",
    "qaoa",
    "vqe",
    "qiskit",
    "fastapi",
    "ai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "qiskit>=1.0.0",
    "qiskit-algorithms>=0.3.0",
    "qiskit-ibm-runtime>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["qoptisolve/tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
